--- a/tools/expression/index.html
+++ b/tools/expression/index.html
@@ -42,20 +42,22 @@ body {
 </div>
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-1@m uk-margin">
-  <p>
-    <b style="font-size:larger">Comparing Expression profiles of multiple genes</b><br>
-    From the <b><a target="_blank" href="https://conekt.legumeinfo.org/profile_comparison/">CoNekT Compare Profiles page</a></b>, you can compare the expression of up to 50 genes on the same graph in each experimental condition or tissue.
-    <p>To use this tool:</p>
-    <ul>
-      <li>Change the species to 'Glycine max'</li>
-      <li>Enter a list of gene identifiers, use the full ID name glyma.Wm82.gnm2.ann1.15g026400</li>
-      <li>Click Show profiles</li>
-    </ul>
-    <p class="uk-text-bold uk-margin-remove">Create a custom heatmap with multiple genes</p>
-    <p class="uk-margin-remove">From the <a class="uk-text-bold" target="_blank" href="https://conekt.legumeinfo.org/heatmap/">CoNekT Create Custom Heatmap page</a>.</p>
-    <p class="uk-text-bold uk-margin-remove">You can generate a detailed heatmap for a single species (Default-tab) and a cross-species comparative heatmap (Comparative-tab).</p> 
-    <p class="uk-text-bold uk-margin-remove">Enter a list of gene identifiers, use the full ID name glyma.Wm82.gnm2.ann1.15g026400</p>
-  </p>
+  <b style="font-size:larger">Comparing Expression profiles of multiple genes</b><br>
+  From the <b><a target="_blank" href="https://conekt.legumeinfo.org/profile_comparison/">CoNekT Compare Profiles page</a></b>, you can compare the expression of up to 50 genes on the same graph in each experimental condition or tissue
+<br>To use this tool: 
+<ul>
+  <li>Change the species to 'Glycine max'</li>
+  <li>Enter a list of gene identifiers, use the full ID name <i>glyma.Wm82.gnm2.ann1.</i>15g026400</li>
+  <li>Click Show profiles</li>
+</ul>
+</p>
+
+<p>
+  <b style="font-size:larger">Create a custom heatmap with multiple genes</b><br>
+  From the <b><a target="_blank" href="https://conekt.legumeinfo.org/heatmap/">CoNekT Create Custom Heatmap page</a>. <br>
+  You can generate a detailed heatmap for a single species <i>(Default-tab)</i> and a cross-species comparative heatmap <i>(Comparative-tab).</i><br>
+  Enter a list of gene identifiers, use the full ID name <i>glyma.Wm82.gnm2.ann1.</i>15g026400
+</p>
 </div>
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-1@m uk-margin">
