fix responsiveness for 1st and 4th card

--- a/tools/expression/index.html
+++ b/tools/expression/index.html
@@ -38,7 +38,7 @@ body {
     This is available for the Williams 82 assembly 2 annotation <i>(glyma.Wm82.gnm2.ann1.)</i>.
     <form id="gotogeneform" oninput="buildURLGeneSequence()" target="_blank">
       <input class="uk-margin-small" id="parturl" type="hidden" value="https://conekt.legumeinfo.org/sequence/find_forLIS/">
-       Prefixed gene ID: <input class="uk-input uk-form-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
+       Prefixed gene ID: <input class="uk-input uk-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
       <input id="go-btn" type="submit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small uk-margin-small">
       <br>
        Examples (include prefix; assembly 2):  glyma.Wm82.gnm2.ann1.Glyma.15g026400  glyma.Wm82.gnm2.ann1.Glyma.12G040000
@@ -69,8 +69,8 @@ body {
   <b style="font-size:larger">BAR eFP (electronic fluorescent pictograph) browser</b> for genes from the in the Williams 82 assemblies 1 and 2.<br><br>
     
   <div class="uk-margin-small">
-      <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" style="display:inline;" target="_blank">
-        <div class="uk-flex-inline uk-flex-row@s uk-flex-column-reverse uk-flex-center@s">
+      <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" target="_blank">
+        <div class="uk-flex-inline uk-flex-row@s uk-flex-column-reverse">
           <div>
             <input type="hidden" id="dataSource" name="dataSource" value="soybean_severin">
             <input type="hidden" id="mode" name="mode" value="Absolute">
@@ -142,7 +142,7 @@ body {
   
     <form id="gotogeneform_2" oninput="buildURLGlycineMineGene()" target="_blank">
       <input id="parturl_2" type="hidden" value="https://mines.legumeinfo.org/glycinemine/gene:" class="uk-margin-small">
-       Prefixed gene ID: <input class="uk-input uk-form-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid_2" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
+       Prefixed gene ID: <input class="uk-input uk-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid_2" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
       <input type="submit" id="go-btn" value="GO" class="uk-input uk-form-width-xsmall uk-form-small uk-margin-small"><br>
        Examples (include prefix; assembly 2):  glyma.Wm82.gnm2.ann1.Glyma.15g026400  glyma.Wm82.gnm2.ann1.Glyma.12G040000
     </form>
