--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -18,7 +18,7 @@ tr, td {
                 <b>Theme:</b>Plant Pathology<br/>
 				<b>Where:</b>Hilton St. Louis Frontenac in St. Louis, Missouri</p>				
 
-			<h4><a href="./SBW_2025.html">2025 Soybean Breeder's Workshop Information and registration page</a></h4><br/><br>
+			<h4><a href="./registration.html">2025 Soybean Breeder's Workshop Information and registration page</a></h4><br/><br>
 				<h3>Soybean Breeder's Workshop Agenda and submitted Presentation Archive</h3>
 
 				<h4>Agenda and submitted Presentations</h4>
