--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -9,7 +9,7 @@ tr, td {
 }
 </style>
 
-<div style="width:250px;float:lefright;margin:10px;"></div>
+<div style="width:250px;float:left;"></div>
   <img src="/assets/img/sbw/SBW_logo.png" alt="Image: Soybean Breeders Workshop"/>
 </div>
 <br><br>
