--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -9,14 +9,18 @@ tr, td {
 }
 </style>
 
-<div style="width:250px;float:left;"></div>
-  <img src="/assets/img/sbw/SBW_logo.png" alt="Image: Soybean Breeders Workshop"/>
-</div>
-<br><br>
+
+
 <h2>2025 Soybean Breeder's Workshop - Soybean Pathology</h2><br>
 <h3>February 17 - 19, 2025</h3><br>
 <h4>Hilton St. Louis Frontenac in St. Louis, Missouri</h4>
+<br><br>
+
+<div style="width:150px;float:right;"></div>
+  <img src="/assets/img/sbw/SBW_logo.png" alt="Image: Soybean Breeders Workshop"/>
+</div>
 
 
 
-	
+
+
