Add parent-request links to the SoyNAM/index.html, and add Return links to the SoyNAM request pages. Also remove trailing spaces in a yaml file.

--- a/projects/SoyNAM/SoyNAM_Parent_request.html
+++ b/projects/SoyNAM/SoyNAM_Parent_request.html
@@ -52,3 +52,8 @@ sitemap: projects/SoyNAM
 <p>Hmmmmm! Jim Specht simply says "Soybean Research Colleagues, this is indeed sliced bread"!
 </p>
 <p><strong>Jim Specht and Brian Diers</strong></p>
+
+<script>
+  document.write('<a href="' + document.referrer + '">Return</a>');
+</script>
+
