--- a/projects/SoyNAM/SoyNAM_RIL_request.html
+++ b/projects/SoyNAM/SoyNAM_RIL_request.html
@@ -34,3 +34,9 @@ sitemap: projects/SoyNAM
  
 <p>Brian Diers, Katy Martin Rainey and Jim Specht
 </p>
+
+<a href="/projects/SoyNAM">Back to the SoyNAM page</a>
+
+<script>
+  document.write('<a href="' + document.referrer + '">Return</a>');
+</script>
