--- a/tools/expression/index.html
+++ b/tools/expression/index.html
@@ -15,9 +15,12 @@ tools_menu: true
     
     This is available for the Williams 82 assembly 2 annotation <i>(glyma.Wm82.gnm2.ann1.)</i>.
     <form id="gotogeneform" oninput="buildURLGeneSequence()" target="_blank">
-      <input class="uk-margin-small" id="parturl" type="hidden" value="https://conekt.legumeinfo.org/sequence/find_forLIS/">
-       Prefixed gene ID: <input class="uk-input uk-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
-      <input id="go-btn" type="submit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small uk-margin-small go-btn">
+      <div> Prefixed gene ID:</div>
+<div class="bar-input-group">
+  <input class="uk-margin-small" id="parturl" type="hidden" value="https://conekt.legumeinfo.org/sequence/find_forLIS/">
+  <input class="uk-input uk-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
+ <input id="go-btn" type="submit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small uk-margin-small go-btn">
+</div>
       <br>
        Examples (include prefix; assembly 2):  glyma.Wm82.gnm2.ann1.Glyma.15g026400  glyma.Wm82.gnm2.ann1.Glyma.12G040000
     </form>
@@ -49,12 +52,12 @@ tools_menu: true
   <div class="uk-margin-small">
       <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" target="_blank">
         <div class="uk-flex-inline uk-flex-row@l uk-flex-column-reverse">
-          <div>
+          <div class="bar-input-group">
             <input type="hidden" id="dataSource" name="dataSource" value="soybean_severin">
             <input type="hidden" id="mode" name="mode" value="Absolute">
-           <input class="uk-input uk-form-width-small uk-form-small" id="primaryGene" style="width:280px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+           <input class="uk-input uk-form-width-small uk-form-small uk-margin-small-top" id="primaryGene" style="width:300px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
             id="quickSearchInput" name="primaryGene" value="Glyma12g04390" onFocus="clearElement(this);" />
-            <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
+            <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn uk-margin-small-top" />
           </div>
           <span style="margin-left: 5px;">Whole-plant atlas; Severin et al. (2010)</span>
         </div>
@@ -65,12 +68,12 @@ tools_menu: true
     <div class="uk-margin-small">
         <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" target="_blank">
           <div class="uk-flex-inline uk-flex-row@l uk-flex-column-reverse">
-            <div>
+            <div class="bar-input-group">
               <input type="hidden" id="dataSource" name="dataSource" value="soybean">
               <input type="hidden" id="mode" name="mode" value="Absolute">
-              <input class="uk-input uk-form-width-small uk-form-small" id="primaryGene" style="width:280px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+              <input class="uk-input uk-form-width-small uk-form-small uk-margin-small-top" id="primaryGene" style="width:300px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
                 id="quickSearchInput" name="primaryGene" value="Glyma.12G040000" onFocus="clearElement(this);" />
-              <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
+              <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn uk-margin-small-top" />
           </div>
           <span style="margin-left: 5px;">Whole-plant and root expression data; Libault et al. (2010)</span>
           </div>
@@ -80,12 +83,12 @@ tools_menu: true
     <div class="uk-margin-small">
         <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" target="_blank">
         <div class="uk-flex-inline uk-flex-row@l uk-flex-column-reverse">
-          <div>
+          <div class="bar-input-group">
             <input type="hidden" id="dataSource" name="dataSource" value="soybean_embryonic_development">
             <input type="hidden" id="mode" name="mode" value="Absolute">
-             <input class="uk-input uk-form-width-small uk-form-small" id="primaryGene" style="width:280px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+             <input class="uk-input uk-form-width-small uk-form-small uk-margin-small-top" id="primaryGene" style="width:300px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
               id="quickSearchInput" name="primaryGene" value="Glyma15g03040" onFocus="clearElement(this);" />
-            <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
+            <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn uk-margin-small-top" />
            </div>
             <span style="margin-left: 5px;">Godberg-Harada Soybean embryonic seed; Danzer et al. (2015)</span>
         </div>
@@ -95,12 +98,12 @@ tools_menu: true
     <div class="uk-margin-small">
         <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" target="_blank">
          <div class="uk-flex-inline uk-flex-row@l uk-flex-column-reverse">
-          <div>
+          <div class="bar-input-group">
             <input type="hidden" id="dataSource" name="dataSource" value="soybean_heart_cotyledon_globular">
             <input type="hidden" id="mode" name="mode" value="Absolute">
-             <input class="uk-input uk-form-width-small uk-form-small" id="primaryGene" style="width:280px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+             <input class="uk-input uk-form-width-small uk-form-small uk-margin-small-top" id="primaryGene" style="width:300px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
               id="quickSearchInput" name="primaryGene" value="Glyma.15g026400" onFocus="clearElement(this);" />
-            <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
+            <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn uk-margin-small-top" />
            </div>
             <span style="margin-left: 5px;">Godberg-Harada Soybean heart / globular / cotyledon; Peltier et al. (2017)</span>
          </div>
@@ -120,8 +123,11 @@ tools_menu: true
   
     <form id="gotogeneform_2" oninput="buildURLGlycineMineGene()" target="_blank">
       <input id="parturl_2" type="hidden" value="https://mines.legumeinfo.org/glycinemine/gene:" class="uk-margin-small">
-       Prefixed gene ID: <input class="uk-input uk-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid_2" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
+       <div>Prefixed gene ID:</div>
+       <div class="bar-input-group">
+       <input class="uk-input uk-width-large uk-form-small" style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid_2" value="glyma.Wm82.gnm2.ann1.Glyma.15g026400">
       <input type="submit" id="go-btn" value="GO" class="uk-input uk-form-width-xsmall uk-form-small uk-margin-small go-btn"><br>
+    </div>
        Examples (include prefix; assembly 2):  glyma.Wm82.gnm2.ann1.Glyma.15g026400  glyma.Wm82.gnm2.ann1.Glyma.12G040000
     </form>
     <font> URL for the gene:</font> <a id="genelink_2" href="" target="_blank" style="word-wrap: break-word;"></a>
@@ -129,9 +135,11 @@ tools_menu: true
     <br>
     <div class="uk-margin-small">... or enter a gene in the Gene Search Tool, then choose the link to GlycineMine:</div>
     <form action="/tools/search/gene.html" name="search" method="get" style="display:inline;">
-       <input class="uk-input uk-form-width-small uk-form-small uk-width-small" id="identifier" style="width:280px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+      <div class="bar-input-group">
+       <input class="uk-input uk-width-large uk-form-small" id="identifier" style="color:#235626;font-style:italic;font-size:0.9em" type="text" 
         id="quickSearchInput" name="identifier" value="Glyma.15g026400" onFocus="clearElement(this);" />
-      <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
+      <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-margin-small uk-form-small go-btn" />
+    </div>
     </form>
     <br>
      Examples (prefix optional; assembly 2):  Glyma.15g026400  glyma.Wm82.gnm2.ann1.Glyma.12G040000
