--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -1,26 +1,96 @@
 ---
 layout: default
-title: 2025 Soybean Breeders Workshop - Plant Pathology
+title: 2025 Soybean Breeders Workshop - Pathology and Breeding Innovations
 sitemap: community/sbw
 ---
 <style>
 tr, td {
-  padding: 15px;
+  padding: 10px;
 }
 </style>
 
 
-
-<h2>2025 Soybean Breeder's Workshop - Soybean Pathology</h2><br>
-<h3>February 17 - 19, 2025</h3><br>
-<h4>Hilton St. Louis Frontenac in St. Louis, Missouri</h4>
-<br><br>
-
-<div style="width:150px;float:right;"></div>
-  <img src="/assets/img/sbw/SBW_logo.png" alt="Image: Soybean Breeders Workshop"/>
-</div>
-
+<img src="/assets/img/SBW_logo.png" style="float: right; height: 175px; width: 300px; margin-left: 1px; margin-right: 1px;"/>
+<h2>2025 Soybean Breeder's Workshop - Pathology and Breeding Innovations<br>
+February 17 - 19, 2025</h2>
+<h5>Hilton St. Louis Frontenac<br>
+<a href="https://www.google.com/maps/place/Hilton+St.+Louis+Frontenac/@38.6341961,-90.4097409,17z/data=!4m9!3m8!1s0x87d8ccdc51b5c88d:0x7035e9e66f84beb7!5m2!4m1!1i2!8m2!3d38.6341961!4d-90.407166!16s%2Fg%2F1vnnjylv?entry=ttu" target="_blank">1335 S Lindbergh Blvd, St. Louis, MO 63131</a>
+<hr>
+<h5> Click <a href="EventBrite" target="_blank"><b>here</b></a> to make hotel reservation. Group rate available until DATE
+</h5>
 
 
+<table style="float: right;">
+  <tr>
+    <th colspan="2"><b>Registration Fees until 1/09/2025</b></th>
+  </tr>
+  <tr>
+    <th><u>Registration</u></th>
+    <th><u>Fees</u></th>  
+  </tr>
+  <tr>
+    <td>Student / PostDoc</td>
+    <td>$125</td>
+  </tr>
+  <tr>
+    <td>Professional</td>
+    <td>$200</td>
+  </tr>
+  <tr>
+    <td>Data Visualation Workshop</td>
+    <td>$250</td>
+  </tr>
+  <tr>
+    <th colspan="2"><b>**Late Registration Fees after 1/10/2025**</b></th>
+  </tr>
+  <tr>
+    <th><u>Registration</u></th>
+    <th><u>Fees</u></th>  
+  </tr>
+  <tr>
+    <td>Student / PostDoc</td>
+    <td>$175</td>
+  </tr>
+  <tr>
+    <td>Professional</td>
+    <td>$250</td>
+  </tr>
+</table>
+
+<h4>Click <a href="EventBrite" target="_blank">here</a> to register and/or submit poster abstract</h4>
+
+
+<h4><b>Poster Presentation Information</b></h4>
+<details>
+<ul>
+  <li>Anyone is welcome to display a poster. Posters previously presented at other meetings are welcome.</li>
+  <li>Poster display space is nominally 36 inches by 48 inches IS THIS CURRECT?? </li>
+  <li>Poster abstracts will be accepted until DATE </li>
+  <li>Posters can be put up in the morning of Monday and must be up by noon on Tuesday, in order to be considered for awards.</li>
+  <li>Posters must be removed by noon on Wednesday.</li>
+  <li>Student Posters will be judged and awards given for the 1st ($300), 2nd ($200), 3rd ($100) place winners.</li>
+  <li>Awards will be presented on Wednesday morning during the opening Welcome and Announcements. If you are not present, you will be notified by email and the award will be sent to you by mail.</li>
+  <li>For questions about the poster session please contact <a href="mailto:cleiton.wartha@corteva.com">Cleiton Wartha</a></li>
+</ul>
+</details>
+
+
+<h4>Retirements, Recognitions and Announcements</h4>
+<details>
+<p>The floor is open to announcements at the specified time Wednesday morning. You are also welcome to notify <a href='mailto:lore0149@umn.edu'>Aaron Lorenz</a> if you would like to schedule the recognition of a colleague or make other announcements from the floor.</p>
+</details>
+
+
+<h4>Meeting Room Request</h4>
+<details> 
+<p>If you plan to organize a small group meeting and need a meeting room during the workshop, please send your request to <a href="mailto:PERSON">PERSON</a> <b>no later than DATE</b> by indicating number of attendees, meeting date and time.</p>
+</details>
+
+
+
+<h4>Job Posting Area</h4>
+<details>
+<p>The Commercial Soybean Breeders executive board will have an area available for participants to put their company job postings. If interested, please bring several informational copies of your open positions.</p>
+</details>
 
 
