--- a/tools/analysis/go.html
+++ b/tools/analysis/go.html
@@ -29,15 +29,11 @@ the gene-list report at <a href="https://mines.legumeinfo.org/glycinemine/begin.
       Insert Gene List:<br />
       (One per line)
     </legend>
-    <textarea id="glyma.list" name="glyma.list" rows=20 cols=34>
-Glyma.09G044100
-Glyma.09G048500
-Glyma.09G048600
-Glyma.09G051100
-    </textarea>
+    <textarea id="glyma.list" name="glyma.list" rows=20 cols=34>Glyma.09G044100&#10;Glyma.09G048500&#10;Glyma.09G048600&#10;Glyma.09G051100</textarea>
+
     <br />
-    <button class="uk-button uk-button-default uk-button-small uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
-    <button class="uk-button uk-button-default uk-button-small uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
+    <button  id="go-annotation-btn" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
+    <button id="go-term-btn" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
   </fieldset>
 </form>
 
@@ -50,8 +46,33 @@ Or upload a text file containing one gene model name per line:<br /><br />
     <li><input type="file" id="glyma.list" name="glyma.list" /></li>
     <li class="uk-text-left">Choose analysis type:<br />
     </li>
-    <button class="uk-button uk-button-default uk-button-small uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
-    <button class="uk-button uk-button-default uk-button-small uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
+    <button id="go-annotation-upload-btn" disabled="true" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
+    <button id="go-term-upload-btn" disabled="true" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
   </ol>
   </fieldset>
 </form>
+
+<script>
+  function disableButton(btn_id,input_id){
+    const btn = document.getElementById(btn_id);
+    const textarea = document.getElementById(input_id);
+    textarea.addEventListener('input', () => {
+    btn.disabled = textarea.value == '';
+    });
+  }
+
+  function disableUploadButton(btn_id){
+    const submitButton = document.getElementById(btn_id);
+    const inputFile = document.querySelector('[type="file"]');
+    inputFile.addEventListener('change', () => {
+    submitButton.disabled = inputFile.files.length ? false : true;
+    });
+  }
+
+
+  disableButton('go-annotation-btn', 'glyma.list');
+  disableButton('go-term-btn', 'glyma.list')
+  disableUploadButton('go-annotation-upload-btn');
+  disableUploadButton('go-term-upload-btn')
+
+</script>
