--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ blog_card: true
     <form action="https://mines.legumeinfo.org/glycinemine/keywordSearchResults.do" name="search" method="get" style="display:inline;" target="_blank">
       <div class="uk-text-left">
         <label class="uk-text-bold">Keyword Search</label><br>
-      <input class="uk-input uk-form-small" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="searchTerm"
+      <input class="uk-input uk-form-small" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInputKeyword" name="searchTerm"
       value="&quot;seed weight&quot;" onFocus="clearElement(this);" />
-      <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn"/>
+      <input type="submit" id="quickSearchButtonKeyword" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn"/>
     </div>
     </form>
   </div>
@@ -35,9 +35,9 @@ blog_card: true
     <form action="https://dev.soybase.org/tools/search/gene.html" name="search" method="get" style="display:inline;">
   <div class="uk-text-left">
     <label class="uk-text-bold">Gene identifier search</label><br>
-    <input class="uk-input uk-form-small" id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="identifier"
+    <input class="uk-input uk-form-small" id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" name="identifier"
     value="Glyma.15g026400" onFocus="clearElement(this);" />
-    <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
+    <input type="submit" id="quickSearchButtonGene" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
   </div>
     </form>
   </div>
@@ -47,9 +47,9 @@ blog_card: true
       <div class="uk-text-left">
         <label class="uk-text-bold">Synteny viewer</label><br>
         <input type="hidden" id="sources" name="sources" value="soybase,liu2020">
-        <input class="uk-input uk-form-small" id="q" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="q"
+        <input class="uk-input uk-form-small" id="q" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" name="q"
         value="Glyma.20G010000" onFocus="clearElement(this);" />
-        <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn"/>
+        <input type="submit" id="quickSearchButtonSynteny" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn"/>
       </div>
     </form>
   </div>
@@ -192,5 +192,17 @@ blog_card: true
       `).join('');
       }
       displayUpcomingEvents()
+
+    async function disableButton(btn_id,input_id){
+    const btn = await document.getElementById(btn_id);
+    const textarea = document.getElementById(input_id);
+    textarea.addEventListener('input', () => {
+    btn.disabled = textarea.value == '';
+    });
+  }
+
+  disableButton('quickSearchButtonKeyword','quickSearchInputKeyword');
+  disableButton('quickSearchButtonGene','identifier');
+  disableButton('quickSearchButtonSynteny','q');
      
 </script>
