--- a/index.html
+++ b/index.html
@@ -175,14 +175,17 @@ blog_card: true
   </a>
 </div>
 
+<script>
+    async function clearElement(e) {
+    var value = await document.getElementById('quickSearchInput').value;
+  }
+  
+</script>
 
 
 <script type="module">
   
-  async function clearElement(e) {
-    var value = await document.getElementById('quickSearchInput').value;
-  }
-  
+
   /* render upcoming events to #custom-event-card when screen is smaller than 1200px */
   import { upcomingEvents } from "lis-events";
       function displayUpcomingEvents(){
