update go enrichment analysis page, homepage, expression page for mobile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ blog_card: true
         <label class="uk-text-bold">Keyword Search</label><br>
       <input class="uk-input uk-form-small" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="searchTerm"
       value="&quot;seed weight&quot;" onFocus="clearElement(this);" />
-      <input type="submit" id="quickSearchButtonKeyword" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn"/>
+      <button type="submit" id="quickSearchButton" name="searchSubmit" class="uk-button uk-button-primary uk-button-small uk-margin-small">GO</button>
     </div>
     </form>
   </div>
@@ -37,7 +37,7 @@ blog_card: true
     <label class="uk-text-bold">Gene identifier search</label><br>
     <input class="uk-input uk-form-small" id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" name="identifier"
     value="Glyma.15g026400" onFocus="clearElement(this);" />
-    <input type="submit" id="quickSearchButtonGene" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn" />
+    <button type="submit" id="quickSearchButton" name="searchSubmit" class="uk-button uk-button-primary uk-button-small uk-margin-small">GO</button>
   </div>
     </form>
   </div>
@@ -49,7 +49,7 @@ blog_card: true
         <input type="hidden" id="sources" name="sources" value="soybase,liu2020">
         <input class="uk-input uk-form-small" id="q" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" name="q"
         value="Glyma.20G010000" onFocus="clearElement(this);" />
-        <input type="submit" id="quickSearchButtonSynteny" name="searchSubmit" value="GO" class="uk-input uk-form-width-xsmall uk-form-small go-btn"/>
+        <button type="submit" id="quickSearchButton" name="searchSubmit" class="uk-button uk-button-primary uk-button-small uk-margin-small">GO</button>
       </div>
     </form>
   </div>
