--- a/tools/analysis/go.html
+++ b/tools/analysis/go.html
@@ -29,11 +29,11 @@ the gene-list report at <a href="https://mines.legumeinfo.org/glycinemine/begin.
       Insert Gene List:<br />
       (One per line)
     </legend>
-    <textarea id="glyma.list" name="glyma.list" rows=20 cols=34>Glyma.09G044100&#10;Glyma.09G048500&#10;Glyma.09G048600&#10;Glyma.09G051100</textarea>
+    <textarea id="glyma.list" name="glyma.list" rows=20 cols=32>Glyma.09G044100&#10;Glyma.09G048500&#10;Glyma.09G048600&#10;Glyma.09G051100</textarea>
 
     <br />
-    <button  id="go-annotation-btn" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
-    <button id="go-term-btn" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
+    <button  id="go-annotation-btn" class="uk-button uk-button-primary uk-margin-small-top" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
+    <button id="go-term-btn" class="uk-button uk-button-primary uk-margin-small-top" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
   </fieldset>
 </form>
 
@@ -46,9 +46,9 @@ Or upload a text file containing one gene model name per line:<br /><br />
     <li><input type="file" id="glyma.list" name="glyma.list" /></li>
     <li class="uk-text-left">Choose analysis type:<br />
     </li>
-    <button id="go-annotation-upload-btn" disabled="true" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
-    <button id="go-term-upload-btn" disabled="true" class="uk-button uk-button-default uk-margin-small-top go-btn" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
   </ol>
+  <button id="go-annotation-upload-btn" disabled="true" class="uk-button uk-button-primary" type="submit" formaction="https://soybase-go-api.app.cloud.gov/annotation.txt">GO Annotation</button><br />
+  <button id="go-term-upload-btn" disabled="true" class="uk-button uk-button-primary uk-margin-small-top" type="submit" formaction="https://soybase-go-api.app.cloud.gov/enrichment.txt">GO Term Enrichment Analysis</button>
   </fieldset>
 </form>
 
