add missing buttons Other Legumes, Expression Resources, Help & Tutorials to middle button group

--- a/index.html
+++ b/index.html
@@ -135,6 +135,21 @@ blog_card: true
           <a href="/tools/parentage/"><b>Parentage & pedigrees</b></a>
         </button>
       </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="View soybean varieties and accessions and their pedigrees.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap azure col3-cumstomgreen" type="button">
+          <a href="https://www.legumeinfo.org" target="_blank"><b>Other legumes</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="View soybean varieties and accessions and their pedigrees.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap customgreen col3-cumstomgreen" type="button">
+          <a href="/tools/expression"><b>Expression resources</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="View soybean varieties and accessions and their pedigrees.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap customgreen col3-cumstomgreen" type="button">
+          <a href="/help/"><b>Help & Tutorials</b></a>
+        </button>
+      </div>
     </div>
 </div>
 <br>
