fix 'All th elements and elements with role=columnheader/rowheader must have data    cells they describe' error

--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -49,7 +49,6 @@ Co-Chair, Public Plant Pathologist:  John Rupe, Univ. of Arkansas</p>
 
 <table class='infotable'>
 	<tr><th>START</th><th>END</th><th>SPEAKER</th><th>TOPIC</th></tr>
-	<tr><td>6:30</td><td>8:00</td><td>Continental Breakfast, Versailles Foyer</td></tr>
 	<tr><td>8:00</td><td>8:05</td><td>Aaron Lorenz, Univ. of Minnesota</td><td>Announcements and Introduction</td></tr>
 	<tr><th colspan='4' style='text-align:left;'>SESSION I:  Sudden Death Syndrome | John Rupe, USDA-ARS</th></tr>
 	<tr><td>8:05</td><td>8:30</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Bhattacharyya_v2.pdf">Madan Bhattacharyya, Iowa State Univ.</a></td><td>Novel biotech. approaches in fighting sudden death syndrome in soybean</td></tr>
@@ -68,15 +67,16 @@ Co-Chair, Public Plant Pathologist:  John Rupe, Univ. of Arkansas</p>
 	<tr><td>1:30</td><td>1:55</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Parrott_v2.pdf">Wayne Parrott, Univ. of Georgia</a></td><td>Untangling the knot: Identifying a gene for root-knot nematode resistance</td></tr>
 	<tr><td>1:55</td><td>2:20</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Arelli.pdf">Prakash Arelli, USDA-ARS</a></td><td>Improved methods for breeding soybean for more durable resistance to SCN</td></tr>
 	<tr><td>2:20</td><td>2:45</td><td>Melissa Mitchum, Univ. of Missouri</td><td>The shifting sands of the soybean cyst nematode-soybean interaction</td></tr>
-	<tr><td>2:45</td><td>3:05</td><th colspan='2' style='text-align:left;'>Snack Break</th></tr>
+	<tr><td>2:45</td><td>3:05</td><td colspan='2' style='text-align:left;'>Snack Break</td></tr>
 	<tr><th colspan='4' style='text-align:left;'>SESSION IV:  Soybean Seedling Diseases | Leah Mchale, Ohio State Univ.</th></tr>
 	<tr><td>3:05</td><td>3:30</td><td>Anne Dorrance, Ohio State Univ.</td><td>Seedling pathogens of soybean, their diversity and best practices for breeding for resistance</td></tr>
 	<tr><td>3:30</td><td>3:55</td><td>Jianxin Ma, Purdue Univ.</td><td>Molecular mapping and characterization of novel Rps genes</td></tr>
 	<tr><td>3:55</td><td>4:20</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Chilvers.pdf">Martin Chilvers, Michigan State Univ.</a></td><td>Oomycetes associated with soybean disease and improved molecular diagnostics</td></tr>
 	<tr><td>4:20</td><td>4:45</td><td>John McDowell, Virginia Tech. Univ.</td><td>Effector-directed breeding as a tool to improve soybean resistance to Phytophthora sojae</td></tr>
 	<tr><td>4:50</td><td>5:00</td><td>Aaron Lorenz, Univ. of Minnesota</td><td>Announcements and Adjourn</td></tr>
-	<tr><td>5:30</td><td>6:30</td><th colspan='2' style='text-align:left;'>Social Hour &amp; Poster Session, Foyer &amp; Versailles 2</th></tr>
+	<tr><th>5:30</th><td>6:30</td><td colspan='4' style='text-align:left; font-weight: bold;'>Social Hour &amp; Poster Session, Foyer &amp; Versailles 2</td></tr>
 </table>
+
 
 <h3>Wednesday February 24th, 2016 | Versailles 1 Room</h3>
 
